--- a/Main.css
+++ b/Main.css
@@ -14,7 +14,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 60px 590px 0 34px;
+  margin: 358px 590px 0 34px;
 }
 
 .u-section-1 .u-countdown-1 {
@@ -157,10 +157,6 @@
     margin-left: 23px;
   }
 
-  .u-section-1 .u-countdown-1 {
-    margin-top: 20px;
-  }
-
   .u-section-1 .u-btn-1 {
     margin-left: 23px;
   }
@@ -169,10 +165,6 @@
 @media (max-width: 991px) {
   .u-section-1 .u-text-1 {
     margin-right: 182px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 20px;
   }
 }
 
@@ -183,7 +175,12 @@
     margin-right: 12px;
   }
 
+  .u-section-1 .u-countdown-1 {
+    margin-top: 20px;
+  }
+
   .u-section-1 .u-btn-1 {
+    margin-top: 20px;
     margin-left: 12px;
   }
 }
@@ -192,13 +189,14 @@
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
     width: auto;
-    margin-top: 277px;
+    margin-top: 219px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-countdown-1 {
-    margin-top: 132px;
+    --animation-custom_in-scale: 1;
+    margin-top: 151px;
     margin-right: auto;
     padding: 16px 0;
   }
@@ -273,7 +271,7 @@
 
   .u-section-1 .u-btn-1 {
     --animation-custom_in-scale: 0.3;
-    margin-top: -205px;
+    margin-top: -209px;
     margin-left: auto;
     padding: 9px 68px 9px 67px;
   }
@@ -313,6 +311,23 @@
   .u-section-2 .u-text-2 {
     margin-right: 0;
     margin-left: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 525px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 41px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    width: auto;
   }
 }.u-section-3 .u-sheet-1 {
   min-height: 776px;
@@ -399,8 +414,12 @@
   margin: 0 auto;
 }
 
+.u-section-4 .u-icon-2 {
+  height: 0;
+}
+
 .u-section-4 .u-icon-3 {
-  height: 100%;
+  height: 0;
 }
 
 @media (max-width: 1199px) {
