--- a/TEDxADIS-Muroor-Youth.css
+++ b/TEDxADIS-Muroor-Youth.css
@@ -349,13 +349,13 @@
 .u-section-3 .u-text-2 {
   line-height: 1.8;
   font-weight: 700;
-  margin: 59px 30px 0 532px;
+  margin: 59px 0 0 539px;
 }
 
 .u-section-3 .u-gallery-1 {
   height: 281px;
   width: 495px;
-  margin: -544px auto 0 20px;
+  margin: -544px auto 0 0;
 }
 
 .u-section-3 .u-carousel-indicators-1 {
@@ -418,7 +418,7 @@
 .u-section-3 .u-image-1 {
   width: 495px;
   height: 255px;
-  margin: 8px auto 60px 20px;
+  margin: 8px auto 60px 0;
 }
 
 @media (max-width: 1199px) {
@@ -432,7 +432,6 @@
 
   .u-section-3 .u-text-2 {
     width: auto;
-    margin-right: 0;
     margin-left: 534px;
   }
 
@@ -487,13 +486,11 @@
 
   .u-section-3 .u-gallery-1 {
     width: 340px;
-    margin-left: 0;
   }
 
   .u-section-3 .u-image-1 {
     width: 340px;
     height: 175px;
-    margin-left: 0;
   }
 } .u-section-4 {
   background-image: none;
